<?xml version="1.0"?>
<package format="2">
  <name>action_test</name>
  <version>0.0.0</version>
  <description>action_test</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>rostest</depend>
  
  <export>
  </export>
</package>
